...
                            onLongClick?.invoke(sharedMap)
                        },
                        onClick = onClick
                    ),
                model = coverData,
                contentScale = ContentScale.Crop,
                contentDescription = "Song Card Image"
            )
        }

        Column(
            modifier = Modifier
                .weight(1f),
...
